--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "perka-job-api",
   "description": "The easy way to use Perka's Job API - http://perka.com/jobs",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "homepage": "https://github.com/imbcmdth/perka-job-api",
   "repository": {
     "type": "git",
@@ -12,6 +12,7 @@
     "email": "jon.carlos.rivera@gmail.com",
     "url": "http://jon-carlos.com"
   },
+  "preferGlobal": true,
   "keywords": [
     "perka",
     "job",
@@ -19,11 +20,15 @@
     "rest"
   ],
   "bin": {
-    "perka-apply": "./bin/apply.js"
+    "perka": "./bin/apply"
+  },
+  "directories": {
+    "bin": "./bin"
   },
   "dependencies": {
     "q": ">=1.0.1",
     "needle": ">=0.7.9"
   },
+  "_id": "perka-job-api@0.0.4",
   "license": "MIT"
 }
